# Cluster

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: cluster.h
src/: cluster.c  draw_mlx.c  gameLoop.c  insertToken.c  rotation.c  utils.c  winner.c
